# Autogram

./: .gitignore  README.md  crosscheck_exploration.ipynb  pyproject.toml  requirements.txt
autogram/: README.md  __init__.py  cli.py  config.py
configs/: abilene.yaml  geant.yaml
data/: README.md  crosscheck_exploration.ipynb
docs/: abilene_geant_invariants.md
rules/: abilene_20260623T174403Z.dl  abilene_20260629T033318Z.dl  abilene_20260629T042106Z.dl  abilene_20260629T043411Z.dl  abilene_20260629T044047Z.dl  abilene_20260629T045643Z.dl  abilene_20260629T065235Z.dl  abilene_20260629T191059Z.dl  abilene_sample_1000_20260629T050458Z.dl  abilene_sample_1000_20260629T180242Z.dl  abilene_sample_1000_20260629T183747Z.dl  abilene_sample_1000_20260629T184917Z.dl  geant_20260623T174413Z.pl  geant_20260629T033417Z.dl  geant_20260629T042128Z.dl  geant_20260629T043432Z.dl  geant_20260629T044126Z.dl  geant_20260629T045658Z.dl  geant_20260629T191630Z.dl  geant_sample_1000_20260629T050533Z.dl  geant_sample_1000_20260629T180406Z.dl  geant_sample_1000_20260629T185023Z.dl  r5_abilene_run1_20260629T201928Z.dl  r5_abilene_run2_20260629T202054Z.dl  r5_abilene_run3_20260629T202157Z.dl  r5_geant_run1_20260629T202347Z.dl  r5_geant_run2_20260629T202727Z.dl  r5_geant_run3_20260629T202921Z.dl  round5_abilene_run1_20260629T195029Z.dl  round5_abilene_run2_20260629T195134Z.dl  round5_geant_run1_20260629T195412Z.dl  round5_geant_run2_20260629T195655Z.dl  round6_current_geant_1_20260629T220604Z.dl  round6_current_geant_2_20260629T220717Z.dl  round6_current_geant_3_20260629T220833Z.dl  round6_final_abilene_1_20260629T213610Z.dl  round6_final_abilene_2_20260629T213715Z.dl  round6_final_geant_1_20260629T212707Z.dl  round6_final_geant_2_20260629T212913Z.dl  round6_geant_link_repair_check_20260629T213505Z.dl  (+6 more)
tests/: conftest.py  test_archive_propose.py  test_artifacts.py  test_assemble.py  test_band.py  test_benchmark2.py  test_cli.py  test_deployed.py  test_deployed_widen.py  test_dsl.py  test_evaluate.py  test_evaluator.py  test_grammar_extension.py  test_induce.py  (+12 more)
(+49 files in other folders)
